--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<DOCTYPE html>
 <html>
     <head>
     <meta charset="utf-8">
@@ -64,7 +65,7 @@
      <!-- section -->
       <section id="tentang" class="py-5 bg-white">
          <div class= "container text-center">
-            <img src="/Tik_XI/User-Avatar-Profile-Transparent-Clip-Art-Background.png" class="profile-img mb-3" alt="foto anak"/>
+            <img src="profil.jpeg" class="profile-img mb-3" alt="foto anak"/>
             <h2>tentang saya</h2>
             <p class="lead">Nama ku Rafi,umur 16 tahun,kesukaan gambar, makanan favorit mie ayam,sekarang lagi belajar percodingan</p>
          </div>
